--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>    
+		
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>1.1.0.Final</version>
+		</dependency>
 		<!-- After -->
 		<dependency>
     <groupId>mysql</groupId>
